Reorganized cls/rtx/settings files location

--- a/bachelor_thesis/cls/csse-fcs.cls
+++ b/bachelor_thesis/cls/csse-fcs.cls
@@ -71,7 +71,7 @@
   \@mastertitletrue
 }
 \ifx\csse@titlefile\@empty
-  \if@mastertitle \renewcommand*{\csse@titlefile}{csse-master.rtx} \fi
+  \if@mastertitle \renewcommand*{\csse@titlefile}{cls/csse-master.rtx} \fi
 \fi
 \AtEndOfClass{\input{\csse@titlefile}}
 
