--- a/bachelor_thesis/cls/settings.tex
+++ b/bachelor_thesis/cls/settings.tex
@@ -30,7 +30,7 @@
 	texcl=true,
 	language={Java},
 }
-\input{listings_cyr_hack}
+\input{cls/listings_cyr_hack}
 
 % Настройка стиля оглавления
 % \renewcommand{\tocchapterfont}{}
